# python-template

./: README.md  cookiecutter.json  test_config.yaml  tox.ini
cookiecutter-pypackage/: pyproject.toml  setup.cfg  tox.ini
cookiecutter-pypackage/docs/: conf.py
cookiecutter-pypackage/docs/_scripts/: generate_license_information.py
cookiecutter-pypackage/src/cookiecutter_pypackage/: __init__.py
cookiecutter-pypackage/tests/unit/: test_example.py
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/docs/: conf.py
{{cookiecutter.repo_name}}/docs/_scripts/: generate_license_information.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.import_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/unit/: test_example.py
